--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -2,7 +2,7 @@
  minor_artifacts:0 "ศิลปวัตถุชั้นรอง"
  minor_artifacts_desc:1 "Minor Artifacts ( £minor_artifacts£ ) represent obscure technology and half-forgotten lore recovered from archaic civilizations, only partially understood by our own science. They are more common than Relics, and can be spent to enact various empire-wide effects."
  artifact_actions:0 "Artifact Actions"
- relics:0 "สิ่งเก่าแก่โบราณ"
+ relics:0 "วัตถุโบราณ"
  relic_activation_cooldown:0 "คูลดาวน์การเปิดใช้งานวัตถุโบราณ"
  tech_science_nexus:0 "$think_tank_3$"
  tech_science_nexus_desc:0 "$think_tank_0_MEGASTRUCTURE_DETAILS$"
@@ -26,7 +26,7 @@
  RELICS:0 "$relics$"
  MINOR_ARTIFACTS:0 "ศิลปวัตถุชั้นรอง"
  RELICS_FOUND:0 "วัตถุโบราณที่ค้นพบ"
- RELICS_FOUND_TOOLTIP:1 "Our empire has found $NUM|Y$ Relic(s)"
+ RELICS_FOUND_TOOLTIP:1 "เราค้นพบวัตถุโบราณ $NUM|Y$ ชิ้น"
  ACTIVATE_RELIC_FOR_TRIUMPH:0 "เปิดใช้งานวัตถุหรือชิ้นส่วนโบราณ"
  CLICK_ACTIVATE_RELIC_FOR_TRIUMPH:0 "§Gคลิกเพื่อ $ACTIVATE_RELIC_FOR_TRIUMPH$§!"
  ACTIVATE_RELIC_FOR_TRIUMPH_TOOLTIP:0 "Click on a Relic to activate a Triumph and gain empire-wide timed effects."
@@ -50,10 +50,10 @@
  TUTORIAL_ARCHAEOLOGY_VIEW_DESC:0 "The Archaeology window shows details of the currently selected §YArchaeology site§!. After progress is made you can still go back and read previous stages by clicking the rune icons.\n\nTo unravel the secrets of a Site, a Scientist must make a §YBreakthrough§! to advance through each of the Site's stages. Scientists with relevant §YTraits and higher Skill§! speed the process of advancing to the next stage, while a higher Difficulty rating of a Site will slow it. Any Scientist who investigates a Site for long enough will amass §YClues§! which will make a Breakthrough more likely."
  RELICS_AND_ARTIFACTS:0 "$RELICS$ และ $MINOR_ARTIFACTS$"
  TRADITION_VIEW_TITLE:1 "การจัดการสังคม"
- archaeologist_1:0 "archaeologist"
+ archaeologist_1:0 "นักโบราณคดี"
  archaeologist_2:0 "ยูนิตโบราณคดี"
  archaeologist_3:0 "โดรนโบราณคดี"
- archaeologists_1:0 "archaeologists"
+ archaeologists_1:0 "นักโบราณคดี"
  archaeologists_2:0 "ยูนิตโบราณคดี"
  archaeologists_3:0 "โดรนโบราณคดี"
  bombardment_pox:0 "Javorian Pox"
@@ -73,7 +73,7 @@
  d_flooded_reactor_pits_desc:0 "These deep pits appear to have once housed the planet's main energy production facilities. Over the eons, rain and flooding have filled the pits with murky water."
  d_crumbling_mining_tunnels:1 "£blocker£ อุโมงค์เหมืองพัง"
  d_crumbling_mining_tunnels_desc:0 "A network of deep tunnels beneath the planet's surface seem to have been its primary source of minerals. Millennia of cave-ins and rockfalls have left only a fraction of the tunnels traversable."
- d_ancient_reactor_pits:0 "Ancient Reactor Pits"
+ d_ancient_reactor_pits:0 "บ่อเครื่องปฏิกรณ์โบราณ"
  d_ancient_reactor_pits_desc:0 "These deep pits near the planet's equator once housed its primary energy generators. Much of the surprisingly sturdy infrastructure has survived, and new reactors can be slotted into it."
  d_immense_solar_array:0 "แผงพลังงานแสงอาทิตย์ขนาดใหญ่"
  d_immense_solar_array_desc:0 "This solar array is nearly the size of a small continent. Most of it has been smashed beyond repair, but the underlying power infrastructure has survived, making it a good site for energy production."
@@ -209,7 +209,7 @@
  ARC_ABANDON:0 "ยกเลิกการขุดค้น"
  artifact_sell_collector:0 "ขายให้นักสะสม"
  artifact_sell_collector_desc:0 "Put some of our minor artifacts up for auction to private collectors."
- artifact_sell_cooldown:0 "$artifact_sell_collector$ Cooldown"
+ artifact_sell_cooldown:0 "เวลาคูลดาวน์ $artifact_sell_collector$"
  artifact_arcane_deciphering:0 "Reverse-Engineer Arcane Technology"
  artifact_arcane_deciphering_desc:0 "Have some minor artifacts broken down and examined by our scientists, to see what insights they will yield for our own research."
  artifact_arcane_deciphering_effect:0 "Break down £minor_artifacts£Minor Artifacts for random technology bonuses. Gain progress in a random tech, gain research points or gain a temporary research speed bonus.\n\nCooldown: £time£ §Y720§!"
@@ -698,7 +698,7 @@
  pop_cat_assimilation_desc:0 "These pops are being modified to better suit our society."
  mod_pop_assimilation_political_power:0 "อำนาจทางการเมือง $pop_cat_assimilation_plural$"
  mod_pop_assimilation_happiness:0 "ความสุข $pop_cat_assimilation$"
- job_assimilation:0 "อยู่ระหว่างการทำให้เหมือน(ดูดกลืน)"
+ job_assimilation:0 "อยู่ระหว่างการทำให้เหมือน(ดัดแปลง)"
  job_assimilation_plural:0 "$job_assimilation$"
  job_assimilation_desc:0 "This pop is being integrated into our collective."
  pop_category_assimilation:0 "มาตรฐานความเป็นอยู่ $pop_cat_assimilation$"
