--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -533,14 +533,14 @@
  distar.244.desc.machi:0 "The [Root.GetName] crew have identified the derelict tanker in orbit of [From.GetName] as an advanced medical research vessel. Its construction suggests it was created by the same organics who built the wormhole destabilizer in the [sealed_entry_system.GetName] system, and like the station, it has been abandoned for quite some time.\n\nWhile most of the ship's data systems have suffered irrevocable degradation, [Root.GetLeaderName] has recovered a number of databases containing information of significant sociological value. They are now being uploaded to our mainframe for complete analysis."
  distar.245.name:0 "Signs of Activity"
  distar.245.desc:0 "The drop pods surrounding [From.GetName] have been drifting powerless for quite some time. The [Root.GetName] reports that whatever aliens these pods were transporting are now but withered husks onboard, having evidently perished hundreds of years ago.\n\nOne sole pod, however, has shown signs of onboard activity. While its engines are disabled, scans suggest its communications array is undamaged.\n\nWe can hail them."
- distar.246.name:0 "The Caretaker"
+ distar.246.name:0 "Caretaker"
  distar.246.desc:0 "§EInitiating Communications Protocol. Hel-lo, <<UNIDENTIFIED VISITOR C>>. I am $NAME_Caretaker$ of Xolexin Drop Pod 175. I have been programmed to assist citizens during the resettlement procedure.\n\nUn--fortunately, a hyperdrive malfunction led Drop Pods 114 through 175 to exit hyperspace eighteen parsecs from our intended destination.\n\nI have attended the citizens as best I could. I even managed to prevent cannibalism for one-thousand-eight-hundred-and-forty days. Un--fortunately, their air supply eventually ran out.\n\nDo you have citizens in need of tending, <<UNIDENTIFIED VISITOR C>>? If so, I would be happy to care for them.§!"
- distar.246.a:0 "This sounds like a great idea. We would be happy to have you."
- distar.246.a.tooltip:0 "§YGovernor $NAME_Caretaker$§! will be added to our recruited Leader Pool."
- distar.246.b:0 "We have no need of your services, beyond the analysis of your parts."
+ distar.246.a:0 "ฟังดูเป็นความคิดที่ดี เรายินดีที่จะมีคุณ"
+ distar.246.a.tooltip:0 "§Yผู้ว่าการ $NAME_Caretaker$§! จะถูกเพิ่มเข้าในกลุ่มผู้นำที่สามารถเลือกจ้างได้"
+ distar.246.b:0 "เราไม่ต้องการคุณ นอกเหนือจากการวิเคราะห์ชิ้นส่วนของคุณ"
  distar.246.b.tooltip:0 "Examine the machine unit for engineering insight."
- distar.246.c:0 "Our policies forbid the use of advanced AIs. Close the channel."
- distar.246.d:0 "We cannot permit an AI to run without surveillance. Fire on that pod."
+ distar.246.c:0 "นโยบายของเราห้ามการใช้ AI ขั้นสูง ปิดช่องทางการสื่อสาร"
+ distar.246.d:0 "เราไม่สามารถอนุญาตให้ AI ทำงานโดยไม่มีการเฝ้าระวังได้"
  distar.246.d.tooltip:0 "§RDestroy the drop pod.§!"
  distar.246.machi:0 "You will be integrated into the [Root.GetName], fellow machine."
  distar.246.machi.b:0 "Your service is not needed. But your parts can be repurposed."
