--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -978,7 +978,7 @@
  resolution_greatergood_workers_rights_desc:0 "It is only right for us to codify the rights of the worker and protect them from common abuses."
  resolution_greatergood_five_year_plans:0 "แผนห้าปี"
  resolution_greatergood_five_year_plans_desc:0 "The governors of our worlds should be given the freedom necessary to propose and enact sweeping reforms for the betterment of all."
- resolution_greatergood_five_year_plans_tooltip:0 "Agri-World, Generator, and Mining planetary designations gain additional bonuses.\n\n§YBasic Subsistence§! living standard §Rbanned§!."
+ resolution_greatergood_five_year_plans_tooltip:0 "การกำหนดประเภทดาวเคราะห์ได้แก่ โลกเกษตรกรรม, โลกไฟฟ้า, และโลกเหมืองแร่จะได้รับโบนัสเพิ่มเติม\n\nมาตรฐานความเป็นอยู่ §Yพื้นฐานการยังชีพ§! §Rถูกแบน§!"
  resolution_greatergood_greater_than_ourselves:0 "ย้ายไปยังดาวเคราะห์ที่เหมาะสมกับงาน"
  resolution_greatergood_greater_than_ourselves_desc:0 "We ask much of our people, but sometimes we must ask more. We should reward those who are willing to place the Empire above their own needs and volunteer to head to the frontier."
  resolution_greatergood_greater_than_ourselves_tooltip:1 "Unlocks an edict that encourages free unemployed pops to voluntarily resettle themselves to suitable planets with jobs and housing within our empire.\n\n§YBasic Subsistence§! and §YStratified Economy§! living standards are §Rbanned§!.\n\n§YChattel Slavery§!, §YLivestock§!, and §YGrid Amalgamation§! slavery types are §Rbanned§!."
@@ -1495,7 +1495,7 @@
  mod_council_member:0 "สมาชิกสภา"
  mod_galactic_community_delegate:0 "Community Delegates"
  mod_station_gatherers_energy_produces_mult:0 "Mining Station Energy Output"
- mod_unemployment_resources_energy_upkeep_add:0 "Unemployed Energy Upkeep"
+ mod_unemployment_resources_energy_upkeep_add:0 "พลังงานที่ใช้บำรุงรักษาผู้ว่างงาน"
  mod_damage_vs_country_type_gray_goo_mult:0 "Damage to Nanites"
  building_embassy:0 "ศูนย์กลางสถานทูตของจักรวรรดิ"
  building_embassy_desc:0 "This building forms the heart of the Empire's diplomatic efforts.\n\nDue to the need to be close to the seat of government, it can only be built at our Capital."
@@ -1509,7 +1509,7 @@
  opinion_galactic_community_opposed_resolution:0 "คัดค้านมติแล้ว"
  opinion_galactic_community_veto_resolution:0 "มติคัดค้าน"
  opinion_galactic_community_emergency_measure_resolution:0 "ประกาศมาตรการฉุกเฉิน"
- federation_law_category_centralization_cooldown:0 "Law Cooldown"
+ federation_law_category_centralization_cooldown:0 "เวลาคูลดาวน์กฎหมาย"
  federation_law_category_fleet_contribution_cooldown:0 "$federation_centralization_cooldown$"
  federation_law_category_succession_type_cooldown:0 "$federation_centralization_cooldown$"
  federation_law_category_succession_term_cooldown:0 "$federation_centralization_cooldown$"
