--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -379,8 +379,8 @@
  BUILDING_SLOT_OPTIONS_DESC:0 "§GClick to see Building construction options§!"
  BUILDING_SLOT_OPEN_DESC:0 "§Eสามารถสร้างสิ่งปลูกสร้างได้ที่นี่§!"
  BUILDING_SLOT_LOCKED:0 "ช่องสิ่งปลูกสร้างถูกล็อก"
- BUILDING_SLOT_LOCKED_DESC:2 "Slots can be unlocked by building $CITY_DISTRICT|Y$ or upgrading your $CAPITAL_BUILDING|Y$"
- BUILDING_SLOT_LOCKED_HABITAT_DESC:1 "Slots can be unlocked by upgrading your $CAPITAL_BUILDING|Y$ or by taking the §Y$ap_voidborn$§! Ascension Perk"
+ BUILDING_SLOT_LOCKED_DESC:2 "ช่องจะปลดล็อกเมื่อสร้าง $CITY_DISTRICT|Y$ หรืออัปเกรด $CAPITAL_BUILDING|Y$ ของคุณ"
+ BUILDING_SLOT_LOCKED_HABITAT_DESC:1 "ช่องจะปลดล็อกเมื่ออัปเกรด $CAPITAL_BUILDING|Y$ ของคุณ หรือมีการยกระดับ §Y$ap_voidborn$§!"
  BUILDING_SLOT_LOCKED_BRANCH_OFFICE_DESC:3 "Branch Office building slots are unlocked by upgrades to this planet's $CAPITAL_BUILDING|Y$."
  BUILDING_CAPPED_IN_EMPIRE_WITH_NUM:0 "จำกัดจำนวนต่อจักรวรรดิ: §Y$NUM$/$MAX$§!"
  BUILDING_CAPPED_IN_EMPIRE:0 "จำกัดจำนวนต่อจักรวรรดิ: §Y$MAX$§!"
@@ -2110,7 +2110,7 @@
  decision_arcology_project:0 "$ap_arcology_project$"
  decision_arcology_project_effects:1 "เปลี่ยนดาวเคราะห์ให้เป็น §Y$pc_city$§! เพิ่ม £housing£ §Y$PLANET_HOUSING_TITLE$§! §Yการผลิตทรัพยากร§! และ §Yเพิ่มประชากร§! และปลดล็อก £district£ §Yเขตมหานคร§! พิเศษ ทำให้§Rไม่สามารถเข้าถึง§!ทรัพยากรธรรมชาติของดาวได้ ป้องกันการก่อสร้างเพิ่มเติมเขต £district£ §Yเขตกำเนิดไฟฟ้า§! §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!"
  decision_arcology_project_effects_short:2 "เพิ่ม £housing£ §Y$PLANET_HOUSING_TITLE$§!, §Yการผลิตทรัพยากร§! และ §Yเพิ่มประชากร§!\nเปิดใช้งาน £district£ §Yเขตมหานคร§!\nปิดการก่อสร้าง £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!"
- decision_arcology_project_requirements:1 "£trigger_no£ §RAll district slots on the planet must be filled with§! §Y$district_city_plural$§! or §Y$district_industrial_plural$§!"
+ decision_arcology_project_requirements:1 "£trigger_no£ §Rช่องก่อสร้างเขตทั้งหมดในดาวนี้จะต้องเติมเต็มด้วย§! §Y$district_city_plural$§! หรือ §Y$district_industrial_plural$§! (เท่านั้น)"
  decision_arcology_project_desc:1 "An unceasing stretch of arcologies will unite the planet from pole to pole, creating one global megacity, one ecumenopolis."
  decision_caravaneer_tupperware:0 "ใช้ที่บรรจุอาหาร (Trium)"
  decision_caravaneer_tupperware_desc:0 "$tupperware_deployed_desc$"
@@ -3922,8 +3922,8 @@
  CREATE_VASSAL_CORE_SECTOR_INVALID:0 "ไม่สามารถสร้างบริวารจากเซกเตอร์แกนกลางได้"
  CREATE_VASSAL_WE_ARE_SUBJECT:0 "การเป็น $SUBJECTTYPE$ เราไม่สามารถสร้างข้ารับใช้ได้"
  TOGGLE_NAVBAR_LOCK:0 "Press to toggle the navigation bar lock"
- NAVBAR_LOCKED:0 "Navigation bar is §Ylocked§!"
- NAVBAR_UNLOCKED:0 "Navigation bar is §Yunlocked§!"
+ NAVBAR_LOCKED:0 "แถบนำทางถูก §Yล็อก§!"
+ NAVBAR_UNLOCKED:0 "แถบนำทางถูก §Yปลดล็อก§!"
  CONSTRUCTION_UNAVAILBALE_SLOT_LOCKED:0 "Cannot construct a building in this slot until this planet has $NUM|Y$ £pop£ Pops"
  PLANET_VIEW_CORPORATE_TAB_DISABLED:0 "§Yยังไม่มีบริษัทของจักรวรรดิอื่นมาตั้งสาขาที่ดาว ดวงนี้§!"
  GROUND_COMBAT_RESERVES:0 "Reserves"
