--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -26,7 +26,7 @@
  MESSAGE_FLEET_ORDER_AUTO_EXPLORE_FALLBACK:0 "§H$FLEET$§! ไม่สามารถเข้าถึงระบบดาวใดๆ ที่ยังไม่ได้สำรวจได้ แต่จะพยายามสำรวจค้นหาระบบเพิ่มเติม"
  FLEET_BUILD_ORDER_CANCELED_MESSAGE_TYPE_TITLE:0 "$AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE$"
  MESSAGE_FLEET_BUILD_ORDER_CANCELED_MESSAGE:0 "$FLEET|H$ ไม่สามารถสร้าง $STATION|H$ ในระบบดาว $SYSTEM|H$ ได้, รับทรัพยากรคืนแล้ว"
- MESSAGE_BYPASS_EXPLORED:0 "Wormhole Explored"
+ MESSAGE_BYPASS_EXPLORED:0 "หนอนที่สำรวจแล้ว"
  BYPASS_EXPLORED_MESSAGE:0 "The Wormhole in $SYSTEM1|Y$ has been explored. It connects to the $SYSTEM2|Y$ system."
  MESSAGE_ESN_ARRIVED_TITLE:0 "นำทางด้วยการทดลองมิติย่อย"
  MESSAGE_ESN_ARRIVED:0 "$FLEET_NAME|Y$ has arrived in the $SYSTEM|Y$ system"
@@ -139,7 +139,7 @@
  ACTION_OFFER_TRADE_DEAL_PROPOSAL_FAILED_RECIPIENT:1 "The trade deal offer from §H[Actor.GetName]§! timed out and was auto-declined."
  MESSAGE_MAKE_RIVAL_TITLE:0 "$RIVALRY$"
  MESSAGE_RECALL_EMBASSY_TITLE:0 "Embassy Recalled"
- MESSAGE_END_RIVALRY_TITLE:0 "$RIVALRY$ Ended"
+ MESSAGE_END_RIVALRY_TITLE:0 "สิ้นสุดการเป็น$RIVALRY$"
  MESSAGE_EMBASSY_TITLE:1 "Establish Embassy"
  MESSAGE_DECLARE_WAR_TITLE:0 "การประกาศสงคราม"
  MESSAGE_OFFER_PEACE_TITLE:0 "ข้อเสนอสงบศึก"
@@ -184,7 +184,7 @@
  MESSAGE_OPEN_BORDERS_TITLE:0 "Borders Opened"
  MESSAGE_CLOSE_BORDERS_TITLE:0 "พรมแดนถูกปิด"
  ACTION_MAKE_RIVAL_NOTIFICATION:1 "§H[From.GetName]§! ได้ประกาศให้ §H[Root.GetName]§! เป็น §H$RIVAL$§! ของพวกเขา\n\nสิ่งนี้จะทำให้ความสัมพันธ์ทางการทูตของพวกเขาแย่ลงอย่างมาก"
- ACTION_END_RIVALRY_NOTIFICATION:2 "§H[From.GetName]§! has ended their $RIVALRY$ with §H[Root.GetName]§!.\n\nThey may be on the path towards reconciliation."
+ ACTION_END_RIVALRY_NOTIFICATION:2 "§H[From.GetName]§! ได้ยุติการเป็น $RIVALRY$ กับ §H[Root.GetName]§!\n\nพวกเขาอาจอยู่บนเส้นทางแห่งความสมานฉันท์"
  ACTION_EMBASSY_NOTIFICATION:1 "§H[From.GetName]§! has sent an embassy to §H[Root.GetName]§!.\n\nThis will improve their relations over time."
  ACTION_RECALL_EMBASSY_NOTIFICATION:2 "§H[From.GetName]§! has recalled their embassy from §H[Root.GetName]§!.\n\nIs this a sign of hostilities to come?"
  ACTION_DECLARE_WAR_NOTIFICATION:3 "§H[From.GetName]§! ประกาศสงครามกับ §H[Root.GetName]§!!\n\nตอนนี้เราจะมาดูกันว่าจักรวรรดิใดจะแข็งแกร่งกว่ากัน"
@@ -310,7 +310,7 @@
  MESSAGE_NEW_HEIR_TITLE:0 "§Hรัชทายาทคนใหม่§!"
  NEW_HEIR_TEXT:0 "§Y$HEIR$§! เป็นรัชทายาทคนใหม่ของจักรวรรดิและจะครองบัลลังก์เมื่อผู้ปกครองคนปัจจุบันของเราสิ้นพระชนม์"
  MESSAGE_TECHNOLOGY_RESEARCH_FINISH:0 "เราได้เสร็จสิ้นการวิจัย $TECHNOLOGY|H$"
- MESSAGE_TECHNOLOGY_ORDER_FINISH_MESSAGE_TYPE_TITLE:0 "Technology researched"
+ MESSAGE_TECHNOLOGY_ORDER_FINISH_MESSAGE_TYPE_TITLE:0 "วิจัยเทคโนโลยีเสร็จแล้ว"
  MESSAGE_DEBRIS_ANALYZED_FINISH:0 "เราได้วิเคราะห์ซากในระบบ $SYSTEM|Y$ แล้ว"
  MESSAGE_DEBRIS_ANALYZED_FINISH_BONUS:1 "£$AREA_KEY$£ §Yการวิจัย$AREA$§!: §G+$VAL|0$§! แต้ม"
  MESSAGE_DEBRIS_ANALYZED_FINISH_TECH_PROGRESS:1 "$TECH|Y$ ความคืบหน้า: §G+$VAL|%0$§!"
@@ -326,7 +326,7 @@
  MESSAGE_WORMHOLE_CLOSED_NO_ACCESS_TITLE:0 "Wormhole Closed"
  MESSAGE_FLEET_LEAVE_SYSTEM_NO_ACCESS_TITLE:0 "ไม่มีการเข้าถึง"
  MESSAGE_REVOLT:1 "The population on planet $PLANET|Y$ is revolting!"
- MESSAGE_PLANET_REVOLT_TITLE:0 "Revolt!"
+ MESSAGE_PLANET_REVOLT_TITLE:0 "การก่อกบฏ!"
  MESSAGE_PLANET_DESTROYED:0 "ดาวเคราะห์ถูกทำลาย"
  MESSAGE_PLANET_DESTROYED_DESC:0 "$PLANET|Y$ $WEAPON_DESC$ $WEAPON_NAME|R$ บนยานโคลอสซัส $ADJ$"
  MESSAGE_TERRAFORMATION_FINISH:1 "$PLANET|Y$ ได้รับการปรับสภาพดาวให้เป็น $PLANET_CLASS|Y$ แล้ว"
@@ -395,5 +395,5 @@
  MESSAGE_LOST_CASUS_BELLI:1 "เราไม่สามารถใช้เหตุแห่งสงคราม $CASUS_BELLI|H$ กับ $COUNTRY|H$ ได้อีกต่อไป"
  MESSAGE_NEW_CLAIM_ON_SYSTEM_TITLE:1 "จักรวรรดิอื่นอ้างสิทธิ์ในระบบดาวของเรา"
  MESSAGE_NEW_CLAIM_ON_SYSTEM:1 "แม้ว่าจะเป็นของเราโดยชอบธรรม แต่ $COUNTRY|H$ ยังคงอ้างสิทธิ์ในระบบดาว $SYSTEM|H$!"
- MESSAGE_STAR_DESTROYED:0 "System Destroyed"
+ MESSAGE_STAR_DESTROYED:0 "ระบบดาวถูกทำลาย"
  MESSAGE_STAR_DESTROYED_DESC:1 "A massive supernova triggered by $ADJ$ §RStar-Eater§! has destroyed the $PLANET|Y$ system."
