--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -83,7 +83,7 @@
  MOD_COUNTRY_MODIFY_SPECIES_COST_MULT:0 "ค่าใช้จ่ายโครงการพิเศษในการดัดแปลงพันธุกรรม"
  MOD_COUNTRY_SUBJECT_INTEGRATION_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการรวมเข้ากับบริวาร"
  MOD_COUNTRY_SUBJECT_INFLUENCE_GAIN_MULT:0 "อิทธิพลจากบริวาร"
- MOD_COUNTRY_SUBJECT_ACCEPTANCE_ADD:0 "Subjugation Acceptance"
+ MOD_COUNTRY_SUBJECT_ACCEPTANCE_ADD:0 "การยอมรับการเป็นเมืองขึ้น/บริวาร"
  MOD_MONTHLY_LOYALTY_GAIN:0 "การเปลี่ยนแปลงความภักดีรายเดือน"
  MOD_COUNTRY_FACTION_INFLUENCE_MULT:0 "ได้รับอิทธิพลจากกลุ่มการเมือง"
  MOD_COUNTRY_FACTION_INFLUENCE_ADD:0 "อิทธิพลสูงสุดที่ได้จากกลุ่มการเมือง"
@@ -242,7 +242,7 @@
  MOD_SHIP_FTL_WARP_RANGE_MULT:0 "ระยะการวาร์ป"
  MOD_SHIP_FTL_HYPER_RANGE_MULT:0 "ระยะของไฮเปอร์"
  MOD_SHIP_FTL_JUMPDRIVE_RANGE_MULT:0 "ระยะการจั้มไดร์ฟ"
- MOD_SHIP_FTL_WORMHOLE_RANGE_MULT:0 "ระยะของรูหนอน"
+ MOD_SHIP_FTL_WORMHOLE_RANGE_MULT:0 "ระยะทางของรูหนอน"
  MOD_SHIP_FTL_WORMHOLE_SPEED_MULT:0 "อัตราการสร้างรูหนอน"
  MOD_SHIP_FTL_WORMHOLES_PER_STATION:0 "รูหนอนที่ใช้งานได้ต่อสถานี"
  MOD_SHIP_HITPOINTS_ADD:1 "HP ยาน"
@@ -296,8 +296,8 @@
  MOD_SHIP_JUMPDRIVE_COOLDOWN_MULT:0 "เวลาคูลดาวน์การขับเคลื่อนแบบจั้มไดร์ฟ"
  MOD_SHIP_NAVAL_CAP_USAGE_ADD:0 "Naval Cap Usage"
  MOD_SHIP_NAVAL_CAP_USAGE_MULT:0 "$MOD_SHIP_NAVAL_CAP_USAGE_ADD$"
- MOD_SHIP_REPAIR_HULL_MULT:0 "Docked Ship Hull Repair Speed"
- MOD_SHIP_REPAIR_ARMOR_MULT:0 "Docked Ship Armor Repair Speed"
+ MOD_SHIP_REPAIR_HULL_MULT:0 "ความเร็วในการซ่อมตัวยานที่จอดเทียบท่า"
+ MOD_SHIP_REPAIR_ARMOR_MULT:0 "ความเร็วในการซ่อมเกราะของยานที่จอดเทียบท่า"
  MOD_OWNED_SHIP_SPEED_MULT:0 "$MOD_SHIP_SPEED_MULT$"
  MOD_OWNED_SHIP_EVASION_MULT:0 "$MOD_SHIP_EVASION_MULT$"
  MOD_OWNED_SHIP_FIRE_RATE_MULT:0 "$MOD_SHIP_FIRE_RATE_MULT$"
@@ -383,7 +383,7 @@
  mod_planet_structures_upkeep_mult:0 "ค่าบำรุงรักษาเขตและสิ่งปลูกสร้าง"
  mod_planet_buildings_cost_mult:0 "ค่าสิ่งปลูกสร้าง"
  mod_planet_buildings_upkeep_mult:0 "ค่าบำรุงรักษาสิ่งปลูกสร้าง"
- mod_planet_buildings_energy_upkeep_mult:0 "ค่าบำรุงรักษาสิ่งปลูกสร้าง £energy£ พลังงาน"
+ mod_planet_buildings_energy_upkeep_mult:0 "£energy£ พลังงานที่ใช้บำรุงรักษาสิ่งปลูกสร้าง"
  mod_planet_districts_cost_mult:0 "ค่าใช้จ่ายเขต"
  mod_planet_districts_upkeep_mult:0 "ค่าบำรุงรักษาเขต"
  mod_planet_districts_energy_upkeep_mult:0 "ค่าบำรุงรักษาเขตพลังงาน"
@@ -517,8 +517,8 @@
  volatile_motes_deficit:0 "ขาดแคลน$volatile_motes$"
  rare_crystals_deficit:0 "ขาดแคลน$rare_crystals$"
  exotic_gases_deficit:0 "ขาดแคลน$exotic_gases$"
- unity_deficit:0 "$unity$ Shortage"
- dark_matter_deficit:0 "$sr_dark_matter$ Shortage"
+ unity_deficit:0 "ขาดแคลน $unity$"
+ dark_matter_deficit:0 "ขาดแคลน $sr_dark_matter$"
  mod_country_base_energy_produces_mult_DESC:0 "Our total empire Energy production is adjusted by this value."
  mod_country_base_minerals_produces_mult_DESC:0 "Our total empire Minerals production is adjusted by this value."
  mod_planet_resource_food_add:0 "อาหารบนดาวเคราะห์"
@@ -594,7 +594,7 @@
  mod_country_ruler_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_ethic_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_power_projection_influence_produces_add:1 "£influence£ $influence$ สูงสุดจาก $country_power_projection$"
- mod_country_power_projection_influence_produces_mult:1 "£influence£ $influence$ from $country_power_projection$"
+ mod_country_power_projection_influence_produces_mult:1 "£influence£ $influence$ จาก $country_power_projection$"
  mod_pop_ethic_pacifist_attraction_mult:0 "การดึงดูดจริยธรรมที่รักสันติ"
  mod_pop_ethic_militarist_attraction_mult:0 "การดึงดูดจริยธรรมที่ชอบสงคราม"
  mod_pop_ethic_materialist_attraction_mult:0 "การดึงดูดจริยธรรมวัตถุนิยม"
@@ -1258,10 +1258,10 @@
  terraforming_candidate:0 "สามารถปรับสภาพดาวได้"
  terraforming_candidate_desc:0 "แม้ว่าจะแห้งแล้งและไร้สิ่งมีชีวิต แต่ดาวดวงนี้ก็มีน้ำในรูปแบบที่เป็นน้ำแข็งและครั้งหนึ่งอาจเคยเป็นที่ตั้งของระบบนิเวศที่เจริญรุ่งเรือง ด้วยเทคโนโลยีที่เหมาะสม มันสามารถปรับเปลี่ยนให้กลายเป็นโลกที่อาศัยอยู่ได้"
  terraforming_candidate_tooltip:0 "เมื่อเราค้นคว้าเทคโนโลยี £society£ §Y$tech_climate_restoration$§! เสร็จแล้ว เราจะสามารถแปลงโฉมดาวเคราะห์ดวงนี้ให้กลายเป็นโลกที่อยู่อาศัยได้"
- frozen_terraforming_candidate:0 "Frozen Terraforming Candidate"
+ frozen_terraforming_candidate:0 "สามารถปรับสภาพดาวหนาวจัดได้"
  frozen_terraforming_candidate_desc:0 "Though cold to the point of being unable to sustain life, the frozen water on this world could allow us to terraform it into a habitable world, if we can find the right method."
  frozen_terraforming_candidate_tooltip:0 "If we pick the §Y$ap_hydrocentric$§! ascension perk and research the £society£ §Y$tech_climate_restoration$§! technology, we will be able to terraform this planet into a habitable world."
- toxic_terraforming_candidate:0 "Toxic Terraforming Candidate"
+ toxic_terraforming_candidate:0 "สามารถปรับสภาพดาวพิษได้"
  toxic_terraforming_candidate_desc:0 "Though the noxious gases on this world make it unfit for life, with enough effort they can be broken down into less lethal compounds, eventually allowing colonization."
  toxic_terraforming_candidate_tooltip:0 "If we pick the §Y$ap_detox$§! ascension perk, we will be able to terraform this planet into a habitable world."
  ultra_rich:1 "Exceptional Quality Minerals"
@@ -1408,20 +1408,20 @@
  mod_pc_machine_habitability:0 "การอยู่อาศัยได้ในโลกเครื่องจักร"
  mod_pc_hive_habitability:0 "การอยู่อาศัยได้ในโลกที่เป็นรัง"
  MOD_POSTFIX_PERCENT:0 "§G%§!"
- SPECIES_TRAIT_PICKS:0 "Species Trait Picks"
- mod_BIOLOGICAL_species_trait_picks_add:0 "Organic $SPECIES_TRAIT_PICKS$"
+ SPECIES_TRAIT_PICKS:0 "คุณลักษณะของเผ่าพันธุ์ที่สามารถเลือกได้"
+ mod_BIOLOGICAL_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (สิ่งมีชีวิต)"
  mod_MECHANICAL_species_trait_picks_add:0 "Mechanical $SPECIES_TRAIT_PICKS$"
- mod_MACHINE_species_trait_picks_add:0 "Machine $SPECIES_TRAIT_PICKS$"
- mod_HUM_species_trait_picks_add:0 "มนุษย์ $SPECIES_TRAIT_PICKS$"
- mod_MAM_species_trait_picks_add:0 "Mammalian $SPECIES_TRAIT_PICKS$"
- mod_REP_species_trait_picks_add:0 "Reptilian $SPECIES_TRAIT_PICKS$"
- mod_AVI_species_trait_picks_add:0 "Avian $SPECIES_TRAIT_PICKS$"
- mod_ART_species_trait_picks_add:0 "Arthropoid $SPECIES_TRAIT_PICKS$"
- mod_MOL_species_trait_picks_add:0 "Molluscoid $SPECIES_TRAIT_PICKS$"
- mod_FUN_species_trait_picks_add:0 "Fungoid $SPECIES_TRAIT_PICKS$"
- mod_PLANT_species_trait_picks_add:0 "พืช $SPECIES_TRAIT_PICKS$"
- mod_LITHOID_species_trait_picks_add:0 "Lithoid $SPECIES_TRAIT_PICKS$"
- mod_AQUATIC_species_trait_picks_add:0 "Aquatic $SPECIES_TRAIT_PICKS$"
+ mod_MACHINE_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (เครื่องจักร)"
+ mod_HUM_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (มนุษย์)"
+ mod_MAM_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (เลี้ยงลูกด้วยน้ำนม)"
+ mod_REP_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (เลื้อยคลาน)"
+ mod_AVI_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (นก)"
+ mod_ART_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (ขาปล้อง/แมลง)"
+ mod_MOL_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (ทาก)"
+ mod_FUN_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (เห็ดรา)"
+ mod_PLANT_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (พืช)"
+ mod_LITHOID_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (หิน)"
+ mod_AQUATIC_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (มีชีวิตอยู่ใต้น้ำ)"
  MOD_COUNTRY_SENSOR_RANGE_ADD:0 "ระยะเซนเซอร์ของจักรวรรดิ"
  MOD_SHIP_SENSOR_RANGE_ADD:0 "ระยะของเซนเซอร์"
  MOD_COUNTRY_IMMIGRATION_PULL_ADD:0 "ดึงการอพยพย้ายเข้าจักรวรรดิ"
@@ -1442,16 +1442,16 @@
  MOD_POP_PURGE_MULT:0 "ความเร็วในการกวาดล้างประชากร"
  MOD_SHIP_COMMUNITY_TERRITORY_SPEED_MULT:0 "Community Space Sublight Speed"
  MOD_SHIP_COMMUNITY_TERRITORY_SPEED_MULT_DESC:0 "Affects the sublight Speed of ships flying through systems belonging to a Galactic Community member"
- MOD_VETO_COOLDOWN_MULT:0 "Veto Cooldown"
+ MOD_VETO_COOLDOWN_MULT:0 "คูลดาวน์ในการยับยั้งมติ"
  MOD_EMERGENCY_MEASURES_COOLDOWN_MULT:0 "คูลดาวน์มาตรการฉุกเฉิน"
  mod_shipsize_crisis_corvette_evasion_mult:1 "$crisis_corvette$ Evasion"
- mod_shipsize_crisis_corvette_disengage_chance_mult:1 "$crisis_corvette$ Disengage Chance"
- mod_shipsize_crisis_destroyer_tracking_mult:1 "$crisis_destroyer$ Tracking"
+ mod_shipsize_crisis_corvette_disengage_chance_mult:1 "$crisis_corvette$ โอกาสหลุดรอด"
+ mod_shipsize_crisis_destroyer_tracking_mult:1 "การติดตาม $crisis_destroyer$"
  mod_shipsize_crisis_cruiser_hull_mult:1 "HP $crisis_cruiser$"
  MOD_SHIP_DAMAGE_AGAINST_STARBASES_MULT:1 "ทำความเสียหายกับฐานอวกาศ"
  MOD_DIPLO_ACTION_ACCEPTANCE_ADD:0 "Diplomatic Acceptance"
- mod_ships_energy_upkeep_mult:0 "Ships £energy£ Energy Upkeep"
- mod_starbases_energy_upkeep_mult:0 "Starbases £energy£ Energy Upkeep"
+ mod_ships_energy_upkeep_mult:0 "£energy£ พลังงานที่ใช้บำรุงรักษายาน"
+ mod_starbases_energy_upkeep_mult:0 "£energy£ พลังงานที่ใช้บำรุงรักษาฐานอวกาศ"
  MOD_CATAPULT_SPREAD_BASE:0 "Quantum Catapult Accuracy (Base)"
  MOD_CATAPULT_SPREAD_MULT:0 "Quantum Catapult Accuracy"
  MOD_CATAPULT_RANGE_BASE:0 "Quantum Catapult Range (Base)"
