--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -96,7 +96,7 @@
  crisobj_destroy_enemy_ships_desc:1 "Destructive battle is a proven and efficient way to wreak havoc and upset balance.\n\nDestroy enemy ships to gain this Menace reward."
  crisobj_destroy_starbases_name:0 "ทำลายฐานอวกาศ"
  crisobj_destroy_starbases_desc:2 "Starbases are the anchor points of empires. Unmoor them, and the empires are doomed to lose control.\n\nDestroy starbases to gain this Menace reward."
- crisobj_purge_pops_name:1 "กวาดล้างหรือดูดกลืนประชากร"
+ crisobj_purge_pops_name:1 "กวาดล้างหรือดัดแปลงประชากร"
  crisobj_purge_pops_desc:2 "An enemy is only a threat as long as it is alive - or an enemy.\n\nPurge or Assimilate Pops to gain this Menace reward for each Pop Purged or Assimilated."
  crisobj_destroy_worlds_name:0 "ทำลายดาว"
  crisobj_destroy_worlds_desc:2 "Take Scorched Earth tactics to a whole other level.\n\nReduce planetary surfaces to rubble using §YArmageddon Bombardment§! - or use the Colossus' §YWorld Cracker§! weapon - to gain this Menace reward."
@@ -151,7 +151,7 @@
  unlocks_menace_objectives:0 "Allows the accumulation of £menace£ §YMenace§! by completing §HMenace Objectives§!.\n"
  menp_megastructure:0 "Aetherophasic Engine"
  menp_megastructure_desc:0 "The Aetherophasic Engine will rip apart the barriers that exist between this world and the Shroud."
- unlocks_crisis_sphere:0 "§HUnlocks Megastructure:§! $crisis_sphere_0$\n"
+ unlocks_crisis_sphere:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดใหญ่:§! $crisis_sphere_0$\n"
  espionage.10.name:0 "Spy Network Formed"
  espionage.10.desc:2 "Our presence in the §Y[from.target.GetName]§! has taken on a clandestine aspect. $role_spymaster$ [from.leader.GetName] is now situated at the core of a burgeoning §HSpy Network§! in [from.target.GetAdj] space."
  espionage.11.name:0 "Spy Network Installed"
@@ -703,11 +703,11 @@
  sabotaged_trader_proxy_office:0 "$sm_trader_proxy_office$ Sabotaged"
  sabotaged_transit_hub:0 "$sm_transit_hub$ Sabotaged"
  sabotaged_warp_fluctuator:0 "$sm_warp_fluctuator$ Sabotaged"
- sabotaged_orbital_ring_anchorage:0 "$sm_orbital_ring_anchorage$ Sabotaged"
- sabotaged_orbital_ring_gun_battery:0 "$sm_orbital_ring_gun_battery$ Sabotaged"
- sabotaged_orbital_ring_habitation:0 "$sm_orbital_ring_habitation$ Sabotaged"
- sabotaged_orbital_ring_hangar_bay:0 "$sm_orbital_ring_hangar_bay$ Sabotaged"
- sabotaged_orbital_ring_missile_battery:0 "$sm_orbital_ring_missile_battery$ Sabotaged"
+ sabotaged_orbital_ring_anchorage:0 "ก่อวินาศกรรม $sm_orbital_ring_anchorage$"
+ sabotaged_orbital_ring_gun_battery:0 "ก่อวินาศกรรม $sm_orbital_ring_gun_battery$"
+ sabotaged_orbital_ring_habitation:0 "ก่อวินาศกรรม $sm_orbital_ring_habitation$"
+ sabotaged_orbital_ring_hangar_bay:0 "ก่อวินาศกรรม $sm_orbital_ring_hangar_bay$"
+ sabotaged_orbital_ring_missile_battery:0 "ก่อวินาศกรรม $sm_orbital_ring_missile_battery$"
  sabotaged_ring_alloys_hub:0 "$sm_ring_alloys_hub$ Sabotaged"
  sabotaged_ring_bureaucracy_hub:0 "$sm_ring_bureaucracy_hub$ Sabotaged"
  sabotaged_ring_consumer_goods_hub:0 "$sm_ring_consumer_goods_hub$ Sabotaged"
