--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -1,16 +1,16 @@
 ﻿l_english:
  orbital_ring_tier_1_MEGASTRUCTURE_DETAILS:0 "An §Y$orbital_ring_tier_1$§! is a Starbase variant that forms a band encircling the planet, providing defense and additional specialization."
  orbital_ring_tier_1_CONSTRUCTION_INFO_DELAYED:1 "Orbital Rings can provide defensive benefits to the planet, providing a platform for many Starbase Modules and Buildings, as well as Habitation Modules and orbital production facilities."
- orbital_ring_tier_1:0 "Orbital Ring"
+ orbital_ring_tier_1:0 "สถานีอวกาศวงโคจรระดับสูง"
  orbital_ring_tier_1_DESC:1 "This Starbase variant encircles the planet, providing space for Modules, Buildings, and Defense Platforms."
- orbital_ring_tier_1_plural:0 "Orbital Rings"
- allow_orbital_rings:0 "§HUnlocks Megastructure:§! $orbital_ring_tier_1$"
- orbital_ring_tier_2:0 "Orbital Ring Tier 2"
- orbital_ring_tier_2_plural:0 "Orbital Rings Tier 2"
- orbital_ring_tier_3:0 "Orbital Ring Tier 3"
- orbital_ring_tier_3_plural:0 "Orbital Rings Tier 3"
+ orbital_ring_tier_1_plural:0 "สถานีอวกาศวงโคจรระดับสูง"
+ allow_orbital_rings:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดใหญ่:§! $orbital_ring_tier_1$"
+ orbital_ring_tier_2:0 "สถานีอวกาศวงโคจรระดับสูง Tier 2"
+ orbital_ring_tier_2_plural:0 "สถานีอวกาศวงโคจรระดับสูง Tier 2"
+ orbital_ring_tier_3:0 "สถานีอวกาศวงโคจรระดับสูง Tier 3"
+ orbital_ring_tier_3_plural:0 "สถานีอวกาศวงโคจรระดับสูง Tier 3"
  STARBASE_STATION_NAME_FORMAT_NON_PRIMARY:0 "$PLANET$ Station"
- tech_orbital_ring_tier_1:0 "Orbital Rings"
+ tech_orbital_ring_tier_1:0 "สถานีอวกาศวงโคจรระดับสูง"
  tech_orbital_ring_tier_1_desc:0 "Allows the construction of massive, band-shaped starbases in stable orbit around colonized planets."
  requires_technology_orbital_ring_tier_1:0 "$TRIGGER_FAIL$ต้องการเทคโนโลยี £engineering£ §Y$tech_orbital_ring_tier_1$§! "
  CAN_CREATE_ORBITAL_STATION_ALREADY_EXISTS_ORBITAL_DEFENCE:1 "An orbital defense station is already orbiting this $CLASS$"
@@ -44,7 +44,7 @@
  QUANTUM_CATAPULT_MAP_TOOLTIP_LEFT_CLICK:0 "§GLeft click a system on the map to choose it as a target.§!"
  QUANTUM_CATAPULT_MAP_TOOLTIP_RIGHT_CLICK:0 "§GRight click anywhere on the map to exit selection mode.§!"
  FLEET_ORDER_NO_QUANTUM_CATAPULT:0 "§RFleets can only be catapulted from a system with a Quantum Catapult§!"
- SM_NOT_POSSIBLE:0 "§R$COMPONENT$ cannot be constructed§!"
+ SM_NOT_POSSIBLE:0 "§R$COMPONENT$ ไม่สามารถสร้างได้§!"
  SM_BLOCKS_DESTRUCTION:0 "§Y$COMPONENT$ may not be destroyed or replaced in certain circumstances:§!"
  FLEET_ORDER_NO_QUANTUM_CATAPULT_IN:0 "§RNo functioning Quantum Catapult in $SYSTEM|H$§!"
  FLEET_ORDER_QUANTUM_CATAPULT_NOT_SAME_SYSTEM:0 "§RSelected fleets are not in the same system§!"
@@ -74,7 +74,7 @@
  feature_hyper_relay_construction_desc:0 "Constructs a §YHyper Relay§! outside of the gravity well of a system. $hyper_relay_DESC$"
  requires_no_existing_hyper_relay:0 "$TRIGGER_FAIL$Cannot build due to existing $hyper_relay$."
  requires_colonized_planet_orbital_ring:0 "$TRIGGER_FAIL$Cannot build in orbit of planets that are neither colonized nor fully under your control."
- orbital_ring:0 "Orbital Ring"
+ orbital_ring:0 "สถานีอวกาศวงโคจรระดับสูง"
  orbital_ring_DESC:0 "$orbital_ring_tier_1_DESC$"
  orbital_ring_MEGASTRUCTURE_DETAILS:0 "$orbital_ring_tier_1_MEGASTRUCTURE_DETAILS$"
  orbital_ring_ruined:0 "Orbital Ring (พังเสียหาย)"
@@ -96,16 +96,16 @@
  MESSAGE_CAPITALS_CONNECTED_RELAY_NETWORK_DESC:0 "We have connected our capital to that of the $OTHER|Y$ through a §YHyper Relay§! network."
  MESSAGE_CAPITALS_DISCONNECTED_RELAY_NETWORK_TITLE:0 "Disconnected Capitals"
  MESSAGE_CAPITALS_DISCONNECTED_RELAY_NETWORK_DESC:0 "Our capital is no longer connected to that of the $OTHER|Y$ through a §YHyper Relay§! network."
- sm_orbital_ring_habitation:0 "Habitation Module"
+ sm_orbital_ring_habitation:0 "โมดูลที่อยู่อาศัย"
  sm_orbital_ring_habitation_desc:1 "High-speed space elevators allow the planet to extend its habitation, resource storage and refinement facilities into orbit.\n"
  orbital_ring_habitation_districts_maxed_out:1 "§YDistricts provided by this $sm_orbital_ring_habitation$ are in use on [planet.GetName]§!."
- sm_orbital_ring_shipyard:0 "Orbital Shipyard"
+ sm_orbital_ring_shipyard:0 "อู่ต่อยาน"
  sm_orbital_ring_shipyard_desc:0 "$sm_shipyard_desc$"
- sm_orbital_ring_anchorage:0 "Orbital Anchorage"
+ sm_orbital_ring_anchorage:0 "ที่จอดยาน"
  sm_orbital_ring_anchorage_desc:0 "$sm_anchorage_desc$"
- sm_orbital_ring_gun_battery:0 "Planetary Defense Guns"
+ sm_orbital_ring_gun_battery:0 "ปืนป้องกันดาวเคราะห์"
  sm_orbital_ring_gun_battery_desc:1 "Adds two medium-size weapon slots to the Orbital Ring.\n"
- sm_orbital_ring_missile_battery:0 "Planetary Defense Batteries"
+ sm_orbital_ring_missile_battery:0 "ป้อมยิงอาวุธนำวิถีที่ป้องกันดาวเคราะห์"
  sm_orbital_ring_missile_battery_desc:1 "Adds two missile weapon slots to the Orbital Ring.\n"
  sm_orbital_ring_hangar_bay:0 "โรงเก็บเครื่องบินป้องกันดาวเคราะห์"
  sm_orbital_ring_hangar_bay_desc:1 "Adds a hangar for Strike Craft to the Orbital Ring.\n"
