--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -550,7 +550,7 @@
  holding_splinter_hive_modifier:0 "Splinter Hive Symbiotic Link"
  holding_noble_vacation_home_modifier:0 "Relaxed Nobles"
  mod_planet_jobs_unity_upkeep_mult:0 "ค่าบำรุงรักษา £unity£ $unity$จาก £job£ งาน"
- MOD_SUBJECT_TECH_COST_MULT:0 "Technology Research Cost"
+ MOD_SUBJECT_TECH_COST_MULT:0 "ค่าวิจัยเทคโนโลยี"
  mod_planet_refiners_exotic_gases_produces_mult:0 "£job_gas_refiner£ ผลผลิต [Root.Refiners]"
  mod_planet_translucers_rare_crystals_produces_mult:0 "£job_translucer£ ผลผลิต [Root.Translucers]"
  mod_planet_chemists_volatile_motes_produces_mult:0 "£job_chemist£ ผลผลิต [Root.Chemists]"
@@ -565,7 +565,7 @@
  domestic_intelligence:0 "Domestic Intelligence"
  newly_released_sector_loyalty:0 "Recently Released Sector"
  newly_released_sector_loyalty_desc:0 "Our gratitude to our founding Empire is still fresh in our minds."
- newly_subjugated_loyalty:0 "Recently Subjugated"
+ newly_subjugated_loyalty:0 "ความต้องการให้เป็นเมืองขึ้น/บริวาร"
  newly_subjugated_loyalty_desc:0 "Anger from being forced into servitude has not yet been forgotten."
  pledge_loyalty_1:0 "Pledge Loyalty"
  pledge_loyalty_2:0 "$pledge_loyalty_1$"
@@ -841,7 +841,7 @@
  resource_subsidies_research:1 "Research"
  resource_subsidies_strategic:1 "Strategic"
  type_crime:0 "£crime£ §Y$PLANET_CRIME_TITLE$§!"
- type_deviancy:0 "£crime£ §YDeviancy§!"
+ type_deviancy:0 "£crime£ §Yความเบี่ยงเบน§!"
  pop_mechanical:0 "Mechanical"
  pop_organic:0 "Organic"
  PRODUCES_RESOURCES_FOR_OVERLORD:0 "Produces for Overlord: "
