--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -683,7 +683,7 @@
  HAS_ASSOCIATION_STATUS_NOT_TRIGGER:0 "ไม่มีสถานะการมีส่วนร่วมในสหพันธ์กับ $COUNTRY|Y$"
  HAS_ASSOCIATION_STATUS_TRIGGER:0 "มีสถานะการมีส่วนร่วมในสหพันธ์กับ $COUNTRY|Y$"
  HAS_CLOSED_BORDERS_NOT_TRIGGER:0 "Has NOT closed their borders towards $COUNTRY|Y$"
- HAS_CLOSED_BORDERS_TRIGGER:0 "Has closed their borders towards $COUNTRY|Y$"
+ HAS_CLOSED_BORDERS_TRIGGER:0 "ได้ปิดพรมแดนของพวกเขาไปที่ $COUNTRY|Y$"
  PLANET_HAPPINESS:0 "ความสุขของดาวเคราะห์โดยเฉลี่ย $COMPARE$ $VALUE|2Y$"
  PLANET_NOT_HAPPINESS:0 "ความสุขของดาวเคราะห์โดยเฉลี่ยไม่ $COMPARE$ $VALUE|2Y$"
  PLANET_NOT_ETHOS:0 "Average ethos divergence on planet NOT $COMPARE$ $VALUE|2Y$"
@@ -1266,7 +1266,7 @@
  RANDOM_FLEET_IN_SYSTEM_EFFECT:0 "Random fleet in system"
  SET_RUINED_EFFECT:0 "Building is Ruined"
  SET_NOT_RUINED_EFFECT:0 "Building is Repaired"
- SET_SUBJECT_OF_EFFECT:2 "$COUNTRY|Y$ becomes a subject under $COUNTRYTWO|Y$"
+ SET_SUBJECT_OF_EFFECT:2 "$COUNTRY|Y$ กลายเป็นบริวารภายใต้ $COUNTRYTWO|Y$"
  SET_SUBJECT_OF_EFFECT_NONE:0 "Becomes independent"
  SET_SPACEPORT_MODULE_EFFECT_REPLACE:0 "Replaces the $MODULE_REPLACED|Y$ with $MODULE|Y$ on the spaceport.\n"
  SET_SPACEPORT_MODULE_EFFECT:0 "Adds the $MODULE|Y$ module to the spaceport.\n"
@@ -1321,8 +1321,8 @@
  NUM_TRADITION_CATEGORIES_NOT:0 "Has NOT unlocked $COMPARATOR$ $VALUE|Y$ Tradition Categories"
  TRIGGER_HAS_TRADITION:0 "มีวัฒนธรรม $TRADITION|Y$"
  TRIGGER_NOT_HAS_TRADITION:0 "ไม่มีวัฒนธรรม $TRADITION|Y$"
- TRIGGER_HAS_ASCENSION_PERK:0 "มี Ascension Perk $TRADITION|Y$"
- TRIGGER_NOT_HAS_ASCENSION_PERK:0 "ไม่มี Ascension Perk $TRADITION|Y$"
+ TRIGGER_HAS_ASCENSION_PERK:0 "มีการยกระดับ $TRADITION|Y$"
+ TRIGGER_NOT_HAS_ASCENSION_PERK:0 "ไม่มีการยกระดับ $TRADITION|Y$"
  TRIGGER_EXCESS_FOOD:0 "มีอาหารส่วนเกิน $COMPARE$ $VAL0|0Y%$"
  TRIGGER_NOT_EXCESS_FOOD:0 "ไม่มีอาหารส่วนเกิน $COMPARE$ $VAL0|0Y%$"
  RESOURCE_MARKET_PRICE:0 "$TYPE$ for $AMOUNT$ unit(s) of $RESOURCE$ is $COMPARE$ $VAL|Y$"
@@ -1733,8 +1733,8 @@
  HAS_GOVERNMENT_NO:0 "ไม่มีรัฐบาล"
  HAS_GOVERNMENT:1 "Has a government of type $GOV|Y$"
  HAS_NOT_GOVERNMENT:1 "ไม่มีรัฐบาลประเภท $GOV|Y$"
- ADD_INTEL_EFFECT:1 "$ACTOR|Y$ gets $INTEL$ Intel on $TARGET|Y$."
- ADD_INTEL_REPORT_EFFECT:0 "$ACTOR|Y$ gets $LEVEL$ $CATEGORY|Y$ Intel on $TARGET|Y$ for $DAYS|Y$ days."
+ ADD_INTEL_EFFECT:1 "$ACTOR|Y$ ได้รับข้อมูล $INTEL$ ของ $TARGET|Y$"
+ ADD_INTEL_REPORT_EFFECT:0 "$ACTOR|Y$ ได้ข้อมูล $LEVEL$ $CATEGORY|Y$ ของ $TARGET|Y$ เป็นเวลา $DAYS|Y$ วัน"
  CHECK_MODIFIER_VALUE:0 "Value of $MODIFIER$ ($VAL1$) is $COMPARATOR$ $VAL2|Y$"
  CHECK_MODIFIER_VALUE_NOT:0 "Value of $MODIFIER$ ($VAL1$) is NOT $COMPARATOR$ $VAL2|Y$"
  CHECK_ECONOMIC_PRODUCTION_MODIFIER_VALUE:0 "Modifiers for producing $RESOURCE|Y$ as a $JOB|Y$ are $COMPARATOR$ $VAL2|Y$ (current: $VAL1$)"
