--- a/mod/thmod/localisation/english/utopia_ascension_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_ascension_l_english.yml
@@ -63,7 +63,7 @@
  utopia.2652.b:0 "There has to be a scientific explanation for this."
  utopia.2652.c:0 "This is not good..."
  utopia.2652.d:0 "We felt the great psionic disturbance of their Awakening."
- utopia.2650.name:0 "The Great Awakening"
+ utopia.2650.name:0 "การตื่นรู้ครั้งยิ่งใหญ่"
  utopia.2650.desc:0 "The [Root.GetSpeciesName] species has experienced what can only be described as a Great Awakening. For a time now, we have been aware of the great psionic potential inherent in our species, but such powers have only manifested themselves in a small minority... until now.\n\nAlmost overnight, [Root.GetSpeciesNamePlural] everywhere have unlocked their full psionic capacity. It is as if some sort of communal pool of [Root.GetSpeciesName] psychic energy finally reached a critical tipping point, collectively awakening the latent abilities of our brains.\n\nTelepathy has already replaced most verbal communication between [Root.GetSpeciesNamePlural], and this is only one small example of the innumerable changes our society is faced with. We are now tied together in a way few of us could have ever imagined."
  utopia.2650.a:0 "The veil has been lifted."
  utopia.2655.name:0 "The Shroud"
